[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "core-auth"
version = "1.0.0"
description = "Advanced Asynchronous Backend System (Enterprise Core)"
authors = [
    {name = "Asad Ullah Dogar", email = "asad@example.com"}
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic-settings>=2.2.1",
    "sqlalchemy>=2.0.29",
    "asyncpg>=0.29.0",
    "redis>=5.0.3",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
    "httpx>=0.27.0",
    "ruff>=0.3.5",
    "bandit>=1.7.8"
]

[tool.setuptools.packages.find]
include = ["app"]